--- a/Minggu 2/latihan.html
+++ b/Minggu 2/latihan.html
@@ -16,7 +16,7 @@
                 <a href="#">tentang saya</a>
             </li>
             <li class="text-navbar">
-                <a href="#">pengalaman kerja</a>
+                <a href="#">pengalaman organisasi</a>
             </li>
             <li class="text-navbar">
                 <a href="#">hubungi saya</a>
@@ -24,57 +24,107 @@
         </ul>
     </nav>
     <div class="container">
-        <div id="header">
-            <img class="foto_saya" src="Me.jpeg" alt="foto saya" width="130" height="130"/>
-            <h1 class="header-text1">Naufal Rotif Dewanto</h1>
-            <p class="header-text2">Nama saya Naufal Rotif Dewanto Seorang Pelajar</p>
+        <div class="header">
+            <div class="column_content">
+                <h1 id="perkenalan">Halo, <span id="span-1">Aku</span> Naufal Rotif Dewanto</h1>
+                <p>Seorang Mahasiswa Informatika ITERA</p>
+            </div>
         </div>
-
         <br>
 
-        <section>
-            <h2 id="tentang">tentang saya</h2>
-            <p>
-                Haloooo.... Nama Saya Naufal Rotif Dewanto Saya adalah Mahasiswa Institute Teknologi Sumatera
-                Mengambil Jurusan Teknik Informatika. Yang bercita cita menjadi programmer yang handal
+        <section id="section-tentang">
+            <h2 id="tentang">#tentang saya</h2>
+            <div class="column">
+                <img class="foto_saya" src="Me.jpeg" alt="foto saya" width="130" height="130" />
+            </div>
+            <p id="p-aboutme">
+                Nama : Naufal Rotif Dewanto <br>
+                TTL : Depok, 16/Agustus/2002> <br>
+                Jenis Kelamin : Laki-Laki <br>
+                Agama : Islam <br>
+                Hobi : Game And Geeks Stuff
+                Alamat Lokasi : GG Mawar 2, Way Huwi, Jati Agung, Lampung Selatan <br>
+
+                Aku adalah seorang mahasiwa Teknik Informatika ITERA, Aku Menyukai Hal baru dan unik <br>
+
             </p>
 
-            <br>
-
             <figure>
-                <video width="500" height="300" poster="https://img.youtube.com/vi/OTL6iSzJ2p4/sddefault.jpg"
+                <video id="video" width="500" height="300" poster="https://img.youtube.com/vi/OTL6iSzJ2p4/sddefault.jpg"
                     src="again.mp4" controls></video>
             </figure>
         </section>
 
-        <br>
+        <section id="section-studi">
+            <h2 id="studi">#pengalaman studi</h2>
+
+            <div id="table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th rowspan="2">No</th>
+                            <th rowspan="2">Sekolah</th>
+                            <th rowspan="2">Lokasi</th>
+                        </tr>
+
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>SDIT Ruhama</td>
+                            <td>Depok</td>
+                        </tr>
+
+                        <tr>
+                            <td>2</td>
+                            <td>SMPIT AT-Taufiq</td>
+                            <td>Depok</td>
+                        </tr>
+
+                        <tr>
+                            <td>3</td>
+                            <td>SMAN 7</td>
+                            <td>Depok</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
 
         <section>
-            <h2 id="kerja">pengalaman organisasi</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th rowspan="2">no</th>
-                        <th rowspan="2">posisi</th>
-                        <th rowspan="2">perusahaan</th>
-                        <th colspan="2">waktu</th>
-                    </tr>
-                    <tr>
-                        <th>mulai</th>
-                        <th>selesai</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Anggota MPK</td>
-                        <td>SMPIT At-Taufiq</td>
-                        <td>Kelas 2</td>
-                        <td>Kelas 3</td>
-                    </tr>
-                </tbody>
-            </table>
+            <h2 id="hubungi">#hubungi saya</h2>
+
+            <div class="sosmed-row">
+                <p id="contact">naufaldewanto37@gmail.com <br>
+                    +6289510119506
+                </p>
+                <div class="sosmed-column">
+                    <a href="https://www.facebook.com/naufal.dewanto.501/" target="_blank"><img src="fb.png" alt="fb"
+                            width="50" height="50"></a>
+                </div>
+                <div class="sosmed-column">
+                    <a href="https://www.instagram.com/dewantonaufal/" target="_blank"><img src="ig.png" alt="ig"
+                            width="50" height="50"></a>
+                </div>
+
+                <div class="sosmed-column">
+                    <form>
+                        <h2>Feedback Anda</h2>
+                        <label for="fname">First name:</label><br>
+                        <input type="text" id="fname" name="fname"><br>
+                        <label for="lname">Last name:</label><br>
+                        <input type="text" id="lname" name="lname"><br>
+                        <label for="pesan">Pesan Anda:</label><br>
+                        <textarea id="pesan" name="pesan" rows="4" cols="50"></textarea>
+                        <input type="submit">
+                    </form>
+                </div>
+            </div>
         </section>
+
+        <footer>
+            <h2 id="footer">&copy;Copyright Naufal Rotif Dewanto</h2>
+        </footer>
     </div>
 </body>
 
